<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Kelompok 3 PTB A</string>
    <string name="title_activity_testing">testing</string>
    <string name="btn_profil">Profil</string>
    <string name="btn_home">Home</string>
    <string name="btn_logbook">List Logbook</string>
    <string name="btn_seminar">List Seminar</string>
    <string name="btn_back">Back</string>
    <string name="btn_password">Halaman Ganti Password</string>
    <string name="kerja_praktek_monitoring">Kerja Praktek Monitoring</string>
    <string name="kp_main">Kerja Praktek Monitoring</string>
    <string name="view_nama">Nama Mahasiswa</string>
    <string name="view_nim">NIM</string>
    <string name="view_ttl">TTL</string>
    <string name="view_hp">Telepom</string>
    <string name="view_alamat">Alamat</string>
    <string name="view_namapt">Nama Perusahaan</string>
    <string name="view_alamatpt">Alamat PT</string>
    <string name="Berita_Acara_Kerja_Praktek">Berita Acara Kerja Praktek</string>
    <string name="alamat_perusahaan">Alamat Perusahaan</string>
    <string name="btn_seminar_kp">Seminar KP</string>
    <string name="foto_dosen">Foto Dosen</string>
    <string name="seminar_kp">SEMINAR KP</string>
    <string name="nama_dosen">HUSNIL KAMIL, M.T.</string>
    <string name="nidn_dosen">NIDN 2001097562</string>
    <string name="input_nilai">INPUT NILAI KP</string>
    <string-array name="namamhs">
        <item>Ananda Fitria</item>
        <item>Siti Nur Aisah</item>
        <item>Daeng Febrino</item>
    </string-array>

    <string-array name="nimmhs">
        <item>2011522014</item>
        <item>2011521018</item>
        <item>2011521019</item>
    </string-array>

    <string-array name="hariseminar">
        <item>Senin/10 Desember 2022</item>
        <item>Rabu/12 Desember 2022</item>
        <item>Jumat/14 Desember 2022</item>
    </string-array>

    <string-array name="jamseminar">
    <item>11.00-13.00</item>
    <item>14.00-16.00</item>
    <item>08.00-10.00</item>
    </string-array>

    <string-array name="pengujiseminar">
    <item>Prof. Ujang Khairul, M.Kom.</item>
    <item>Fachrina, M.Kom.</item>
    <item>Dachriyanus, M.T.</item>
    </string-array>

    <string-array name="fotomhs">
        <item>@drawable/nanda</item>
        <item>@drawable/nanda</item>
        <item>@drawable/nanda</item>
    </string-array>
</resources>