<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@color/secondary_color">

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottom_navigation_menu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/primary_color"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_alignParentBottom="true" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/btn_home"
                android:layout_width="100dp"
                android:layout_height="match_parent"
                android:background="@color/primary_color"
                android:contentDescription="@string/app_name"
                app:srcCompat="@drawable/ic_baseline_home" />

            <ImageButton
                android:id="@+id/btn_logbook"
                android:layout_width="60dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/primary_color"
                android:contentDescription="@string/btn_logbook"
                android:minHeight="48dp"
                app:srcCompat="@drawable/ic_baseline_calendar_today" />

            <ImageButton
                android:id="@+id/btn_seminar"
                android:layout_width="60dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/primary_color"
                android:contentDescription="@string/btn_seminar"
                app:srcCompat="@drawable/ic_baseline_add_task" />

            <ImageButton
                android:id="@+id/btn_profil"
                android:layout_width="60dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/primary_color"
                android:contentDescription="@string/btn_profil"
                app:srcCompat="@drawable/ic_baseline_person" />

        </LinearLayout>
    </com.google.android.material.bottomnavigation.BottomNavigationView>

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="90dp"
        app:srcCompat="@drawable/photo_dosen"
        android:contentDescription="@string/photo_dosen" />

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/upper_navigation_menu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/primary_color"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">




    </com.google.android.material.bottomnavigation.BottomNavigationView>


</RelativeLayout>