<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ResponKp"
    android:background="@color/secondary_color">


    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/upper_navigation_menu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/primary_color"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fontFamily="@font/poppinssemibold"
            android:paddingTop="15dp"
            android:text="@string/kp_main"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="20sp" />

    </com.google.android.material.bottomnavigation.BottomNavigationView>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottom_navigation_menu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/primary_color"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_alignParentBottom="true" >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/btn_home"
                android:layout_width="137dp"
                android:layout_height="match_parent"
                android:background="@color/primary_color"
                android:contentDescription="@string/app_name"
                app:layout_constraintBottom_toBottomOf="@+id/btn_logbook"
                app:layout_constraintEnd_toEndOf="@+id/btn_profil"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0"
                app:srcCompat="@drawable/ic_baseline_home" />

            <ImageButton
                android:id="@+id/btn_logbook"
                android:layout_width="137dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/primary_color"
                android:contentDescription="@string/btn_logbook"
                android:minHeight="48dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/btn_profil"
                app:layout_constraintStart_toStartOf="@+id/btn_home"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_baseline_calendar_today" />

            <ImageButton
                android:id="@+id/btn_profil"
                android:layout_width="137dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/primary_color"
                android:contentDescription="@string/btn_profil"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_baseline_person" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.bottomnavigation.BottomNavigationView>

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="49dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="28dp"
        android:layout_marginTop="68dp"
        android:layout_marginEnd="27dp"
        android:layout_marginBottom="614dp"
        android:fontFamily="@font/poppinsbold"
        android:text="Respon Logbook"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="20dp" />


    <EditText
        android:id="@+id/formrespon"
        android:layout_width="273dp"
        android:layout_height="116dp"
        android:layout_above="@+id/bottom_navigation_menu"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="70dp"
        android:layout_marginEnd="68dp"
        android:layout_marginBottom="406dp"
        android:background="@color/white"
        android:drawablePadding="24dp"
        android:fontFamily="@font/poppinsmedium"
        android:hint="Form Respon"
        android:paddingLeft="5dp"
        android:paddingTop="5dp"
        android:textAlignment="center"
        android:textColor="#616161"
        android:textSize="15sp" />

    <Button
        android:id="@+id/btn_update"
        android:layout_width="268dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="73dp"
        android:layout_marginTop="302dp"
        android:layout_marginEnd="70dp"
        android:layout_marginBottom="370dp"
        android:background="@drawable/button_save"
        android:onClick="updateOnClick"
        android:text="Update"
        android:textSize="20dp" />

</RelativeLayout>